# comparative-methods-RNA-secondary-structures

./: .gitignore  Dockerfile  README.md
benchmark/ASPRAlign-0.92/: ASPRAlign-config-alternative.txt  ASPRAlign-config.txt  CHANGELOG.txt  COPYING.txt  INSTALL.txt  README.txt
benchmark/script/: aspralign_workbench.py  nestedalign_workbench.py  paths.py  requirements.txt  workbench.py
molecolePerTest/5S-Archaea-db/: CRW-5S_A_C_1_noHeader-2D-dotbracket.txt  CRW-5S_A_C_20_noHeader-2D-dotbracket.txt  CRW-5S_A_C_22_noHeader-2D-dotbracket.txt  CRW-5S_A_C_23_noHeader-2D-dotbracket.txt  CRW-5S_A_C_24_noHeader-2D-dotbracket.txt  CRW-5S_A_C_25_noHeader-2D-dotbracket.txt  CRW-5S_A_E_10_noHeader-2D-dotbracket.txt  CRW-5S_A_E_11_noHeader-2D-dotbracket.txt  CRW-5S_A_E_12_noHeader-2D-dotbracket.txt  CRW-5S_A_E_13_noHeader-2D-dotbracket.txt  CRW-5S_A_E_14_noHeader-2D-dotbracket.txt  CRW-5S_A_E_15_noHeader-2D-dotbracket.txt  CRW-5S_A_E_16_noHeader-2D-dotbracket.txt  CRW-5S_A_E_17_noHeader-2D-dotbracket.txt  CRW-5S_A_E_18_noHeader-2D-dotbracket.txt  CRW-5S_A_E_19_noHeader-2D-dotbracket.txt  CRW-5S_A_E_21_noHeader-2D-dotbracket.txt  CRW-5S_A_E_26_noHeader-2D-dotbracket.txt  CRW-5S_A_E_27_noHeader-2D-dotbracket.txt  (+8 more)
workbench/: cluster_features_workbench.py  cluster_matrix_workbench.py  cores_calculator_workbench.py  molecules.csv  paths.py  requirements.txt  workbench.py
workbench/script/planeGraph2tree/: CMakeLists.txt  CanonicalFormComputing.cpp  CentroidComputing.cpp  CentroidComputing.h  DCELformTransfer.cpp  DCELformTransfer.h  RootTransformation.cpp  RootTransformation.h
(+3277 files in other folders)
